src/TaskPrincess.DomainLanguage/Antlr/FilterParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Filter.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace TaskPrincess.DomainLanguage.Antlr {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class FilterParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, DOT=3, STRING=4, INT=5, DOUBLE=6, UUID=7, AND=8, OR=9, 
		XOR=10, COLON=11, NOT=12, BEFORE=13, AFTER=14, NONE=15, ANY=16, MEQUALS=17, 
		ISNT=18, HAS=19, HASNT=20, STARTS_WITH=21, ENDS_WITH=22, MWORD=23, NO_WORD=24, 
		LESS_THAN_OR_EQUAL_TO=25, GREATER_THAN_OR_EQUAL_TO=26, LESS_THAN=27, GREATER_THAN=28, 
		NOT_EQUAL=29, EQUALS=30, TAG=31, DAY_MONDAY=32, DAY_TUESDAY=33, DAY_WEDNESDAY=34, 
		DAY_THURSDAY=35, DAY_FRIDAY=36, DAY_SATURDAY=37, DAY_SUNDAY=38, DAY_ORDINAL=39, 
		WEEK_SOCW=40, WEEK_EOCW=41, WEEK_SOW=42, WEEK_EOW=43, WEEK_SOWW=44, WEEK_EOWW=45, 
		WEEK_SOD=46, WEEK_EOD=47, WEEK_YESTERDAY=48, WEEK_TODAY=49, WEEK_NOW=50, 
		WEEK_TOMORROW=51, MONTH_JANUARY=52, MONTH_FEBUARY=53, MONTH_MARCH=54, 
		MONTH_APRIL=55, MONTH_MAY=56, MONTH_JUNE=57, MONTH_JULY=58, MONTH_AUGUST=59, 
		MONTH_SEPTEMBER=60, MONTH_OCTOBER=61, MONTH_NOVEMBER=62, MONTH_DECEMBER=63, 
		DATE_CALC_LATER=64, REGEX=65, WORD=66, WHITESPACE=67;
	public const int
		RULE_query = 0, RULE_expression = 1, RULE_filter_id = 2, RULE_filter_tags = 3, 
		RULE_predicate = 4, RULE_binary_operator = 5, RULE_relational_operator = 6, 
		RULE_constant = 7, RULE_value = 8, RULE_property_modifier = 9, RULE_date = 10, 
		RULE_date_day = 11, RULE_date_week = 12, RULE_date_month = 13, RULE_date_calc = 14, 
		RULE_property = 15;
	public static readonly string[] ruleNames = {
		"query", "expression", "filter_id", "filter_tags", "predicate", "binary_operator", 
		"relational_operator", "constant", "value", "property_modifier", "date", 
		"date_day", "date_week", "date_month", "date_calc", "property"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "')'", "'.'", null, null, null, null, null, null, null, "':'", 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "'<='", "'>='", "'<'", "'>'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, "DOT", "STRING", "INT", "DOUBLE", "UUID", "AND", "OR", 
		"XOR", "COLON", "NOT", "BEFORE", "AFTER", "NONE", "ANY", "MEQUALS", "ISNT", 
		"HAS", "HASNT", "STARTS_WITH", "ENDS_WITH", "MWORD", "NO_WORD", "LESS_THAN_OR_EQUAL_TO", 
		"GREATER_THAN_OR_EQUAL_TO", "LESS_THAN", "GREATER_THAN", "NOT_EQUAL", 
		"EQUALS", "TAG", "DAY_MONDAY", "DAY_TUESDAY", "DAY_WEDNESDAY", "DAY_THURSDAY", 
		"DAY_FRIDAY", "DAY_SATURDAY", "DAY_SUNDAY", "DAY_ORDINAL", "WEEK_SOCW", 
		"WEEK_EOCW", "WEEK_SOW", "WEEK_EOW", "WEEK_SOWW", "WEEK_EOWW", "WEEK_SOD", 
		"WEEK_EOD", "WEEK_YESTERDAY", "WEEK_TODAY", "WEEK_NOW", "WEEK_TOMORROW", 
		"MONTH_JANUARY", "MONTH_FEBUARY", "MONTH_MARCH", "MONTH_APRIL", "MONTH_MAY", 
		"MONTH_JUNE", "MONTH_JULY", "MONTH_AUGUST", "MONTH_SEPTEMBER", "MONTH_OCTOBER", 
		"MONTH_NOVEMBER", "MONTH_DECEMBER", "DATE_CALC_LATER", "REGEX", "WORD", 
		"WHITESPACE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Filter.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static FilterParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public FilterParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public FilterParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class QueryContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_query; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFilterVisitor<TResult> typedVisitor = visitor as IFilterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQuery(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QueryContext query() {
		QueryContext _localctx = new QueryContext(Context, State);
		EnterRule(_localctx, 0, RULE_query);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 32; expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
	 
		public ExpressionContext() { }
		public virtual void CopyFrom(ExpressionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ParenthesesExpressionContext : ExpressionContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ParenthesesExpressionContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFilterVisitor<TResult> typedVisitor = visitor as IFilterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParenthesesExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FilterIdExpressionContext : ExpressionContext {
		public Filter_idContext filter_id() {
			return GetRuleContext<Filter_idContext>(0);
		}
		public FilterIdExpressionContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFilterVisitor<TResult> typedVisitor = visitor as IFilterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFilterIdExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BinaryExpressionContext : ExpressionContext {
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public Binary_operatorContext binary_operator() {
			return GetRuleContext<Binary_operatorContext>(0);
		}
		public BinaryExpressionContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFilterVisitor<TResult> typedVisitor = visitor as IFilterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBinaryExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PredicateExpressionContext : ExpressionContext {
		public PredicateContext predicate() {
			return GetRuleContext<PredicateContext>(0);
		}
		public PredicateExpressionContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFilterVisitor<TResult> typedVisitor = visitor as IFilterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPredicateExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FilterTagsExpressionContext : ExpressionContext {
		public Filter_tagsContext filter_tags() {
			return GetRuleContext<Filter_tagsContext>(0);
		}
		public FilterTagsExpressionContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFilterVisitor<TResult> typedVisitor = visitor as IFilterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFilterTagsExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		return expression(0);
	}

	private ExpressionContext expression(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ExpressionContext _localctx = new ExpressionContext(Context, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 2;
		EnterRecursionRule(_localctx, 2, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 42;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case WORD:
				{
				_localctx = new PredicateExpressionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;

				State = 35; predicate();
				}
				break;
			case INT:
			case UUID:
				{
				_localctx = new FilterIdExpressionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 36; filter_id();
				}
				break;
			case TAG:
				{
				_localctx = new FilterTagsExpressionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 37; filter_tags();
				}
				break;
			case T__0:
				{
				_localctx = new ParenthesesExpressionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 38; Match(T__0);
				State = 39; expression(0);
				State = 40; Match(T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			Context.Stop = TokenStream.LT(-1);
			State = 51;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new BinaryExpressionContext(new ExpressionContext(_parentctx, _parentState));
					PushNewRecursionContext(_localctx, _startState, RULE_expression);
					State = 44;
					if (!(Precpred(Context, 5))) throw new FailedPredicateException(this, "Precpred(Context, 5)");
					State = 46;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AND) | (1L << OR) | (1L << XOR))) != 0)) {
						{
						State = 45; binary_operator();
						}
					}

					State = 48; expression(6);
					}
					} 
				}
				State = 53;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Filter_idContext : ParserRuleContext {
		public ITerminalNode UUID() { return GetToken(FilterParser.UUID, 0); }
		public ITerminalNode INT() { return GetToken(FilterParser.INT, 0); }
		public Filter_idContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_filter_id; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFilterVisitor<TResult> typedVisitor = visitor as IFilterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFilter_id(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Filter_idContext filter_id() {
		Filter_idContext _localctx = new Filter_idContext(Context, State);
		EnterRule(_localctx, 4, RULE_filter_id);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54;
			_la = TokenStream.LA(1);
			if ( !(_la==INT || _la==UUID) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Filter_tagsContext : ParserRuleContext {
		public ITerminalNode TAG() { return GetToken(FilterParser.TAG, 0); }
		public Filter_tagsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_filter_tags; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFilterVisitor<TResult> typedVisitor = visitor as IFilterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFilter_tags(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Filter_tagsContext filter_tags() {
		Filter_tagsContext _localctx = new Filter_tagsContext(Context, State);
		EnterRule(_localctx, 6, RULE_filter_tags);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56; Match(TAG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PredicateContext : ParserRuleContext {
		public PropertyContext property() {
			return GetRuleContext<PropertyContext>(0);
		}
		public ITerminalNode COLON() { return GetToken(FilterParser.COLON, 0); }
		public ITerminalNode DOT() { return GetToken(FilterParser.DOT, 0); }
		public Property_modifierContext property_modifier() {
			return GetRuleContext<Property_modifierContext>(0);
		}
		public ConstantContext constant() {
			return GetRuleContext<ConstantContext>(0);
		}
		public Relational_operatorContext relational_operator() {
			return GetRuleContext<Relational_operatorContext>(0);
		}
		public PredicateContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_predicate; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFilterVisitor<TResult> typedVisitor = visitor as IFilterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPredicate(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PredicateContext predicate() {
		PredicateContext _localctx = new PredicateContext(Context, State);
		EnterRule(_localctx, 8, RULE_predicate);
		int _la;
		try {
			State = 71;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 58; property();
				State = 61;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==DOT) {
					{
					State = 59; Match(DOT);
					State = 60; property_modifier();
					}
				}

				State = 63; Match(COLON);
				State = 65;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
				case 1:
					{
					State = 64; constant();
					}
					break;
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 67; property();
				State = 68; relational_operator();
				State = 69; constant();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Binary_operatorContext : ParserRuleContext {
		public ITerminalNode AND() { return GetToken(FilterParser.AND, 0); }
		public ITerminalNode OR() { return GetToken(FilterParser.OR, 0); }
		public ITerminalNode XOR() { return GetToken(FilterParser.XOR, 0); }
		public Binary_operatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_binary_operator; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFilterVisitor<TResult> typedVisitor = visitor as IFilterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBinary_operator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Binary_operatorContext binary_operator() {
		Binary_operatorContext _localctx = new Binary_operatorContext(Context, State);
		EnterRule(_localctx, 10, RULE_binary_operator);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 73;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AND) | (1L << OR) | (1L << XOR))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Relational_operatorContext : ParserRuleContext {
		public ITerminalNode LESS_THAN_OR_EQUAL_TO() { return GetToken(FilterParser.LESS_THAN_OR_EQUAL_TO, 0); }
		public ITerminalNode GREATER_THAN_OR_EQUAL_TO() { return GetToken(FilterParser.GREATER_THAN_OR_EQUAL_TO, 0); }
		public ITerminalNode LESS_THAN() { return GetToken(FilterParser.LESS_THAN, 0); }
		public ITerminalNode GREATER_THAN() { return GetToken(FilterParser.GREATER_THAN, 0); }
		public ITerminalNode NOT_EQUAL() { return GetToken(FilterParser.NOT_EQUAL, 0); }
		public ITerminalNode EQUALS() { return GetToken(FilterParser.EQUALS, 0); }
		public Relational_operatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_relational_operator; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFilterVisitor<TResult> typedVisitor = visitor as IFilterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRelational_operator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Relational_operatorContext relational_operator() {
		Relational_operatorContext _localctx = new Relational_operatorContext(Context, State);
		EnterRule(_localctx, 12, RULE_relational_operator);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LESS_THAN_OR_EQUAL_TO) | (1L << GREATER_THAN_OR_EQUAL_TO) | (1L << LESS_THAN) | (1L << GREATER_THAN) | (1L << NOT_EQUAL) | (1L << EQUALS))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstantContext : ParserRuleContext {
		public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public ConstantContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constant; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFilterVisitor<TResult> typedVisitor = visitor as IFilterVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstant(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConstantContext constant() {
		ConstantContext _localctx = new ConstantContext(Context, State);
		EnterRule(_localctx, 14, RULE_constant);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 77; value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
